tests/regression/errors/basic/undefined_var_15.csd
// Undefined variable test 15
vibez.spill("Using undefined:", undefined_var_15)
sus result drip = missing_variable + 15
